force-app/main/default/objects/ddcAssess__Entity_Assessment__c/ddcAssess__Entity_Assessment__c.object-meta.xml
<CustomObject>
    <label>Entity Assessment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Entity Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>