force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Assessment_Summary__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Assessment_Summary__c</fullName>
    <label>Assessment Summary</label>
    <referenceTo>ddcAssess__Assessment_Summary__c</referenceTo>
    <relationshipLabel>Entity Assessments</relationshipLabel>
    <relationshipName>Entity_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>