force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Different__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Different__c</fullName>
    <formula>ddcAssess__Matched__c - ddcAssess__In_Sync__c -  ddcAssess__Inactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>