force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Error_Count__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Error_Count__c</fullName>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>