force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Error_Messages__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Error_Messages__c</fullName>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>