force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__In_Sync__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__In_Sync__c</fullName>
    <label>In Sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>