force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__In_Sync_pcnt__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__In_Sync_pcnt__c</fullName>
    <formula>IF(ddcAssess__Matched__c &gt; 0, ddcAssess__In_Sync__c / ddcAssess__Matched__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Sync %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>