force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Inactive__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Inactive__c</fullName>
    <label>Inactive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>