force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__International__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__International__c</fullName>
    <description>Accounts located in areas not covered by Data.com</description>
    <label>International</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>