force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Person__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Person__c</fullName>
    <description>Count of Person Accounts (for Account) or Personal Email addresses (Lead and Contact)</description>
    <label>Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>