force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Personal_Email__c</fullName>
    <label>Personal Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>