force-app/main/default/objects/ddcAssess__Entity_Assessment__c/fields/ddcAssess__Unmatched__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Unmatched__c</fullName>
    <formula>ddcAssess__Total__c - ddcAssess__Matched__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unmatched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>